# bad-memory-c

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
results/: AllFull_BreadthFirstParallel_1000_1.json  AllFull_BreadthFirst_1000_1.json  AllFull_DepthFirst_1000_1.json  HardNoAmountVersion_BreadthFirst_2914_1.json  HardYesAmountVersion_BreadthFirst_3081_1.json  MaxGroupWitnessesNo_BreadthFirstParallel_1000_1.json  MaxGroupWitnessesNo_BreadthFirst_1000_1.json  MaxGroupWitnessesNo_DepthFirst_1000_1.json  MaxGroupWitnessesYes_BreadthFirstParallel_1000_1.json  MaxGroupWitnessesYes_BreadthFirst_1000_1.json  MaxGroupWitnessesYes_DepthFirst_1000_1.json  MaxWitnessesNo_BreadthFirstParallel_1000_1.json  MaxWitnessesNo_BreadthFirst_1000_1.json  MaxWitnessesNo_DepthFirst_1000_1.json  MaxWitnessesYes_BreadthFirstParallel_1000_1.json  MaxWitnessesYes_BreadthFirst_1000_1.json  MaxWitnessesYes_DepthFirst_1000_1.json  SimpleNo_Averages.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_1.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_10.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_11.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_12.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_13.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_14.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_15.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_16.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_17.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_18.json  SimpleNo_BreadthFirst_&_SimpleNo_DepthFirst_1000_2.json  (+30 more)
(+22 files in other folders)
